Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -152,9 +152,6 @@ input[type=submit],
 	}
 }
 
-.widget .extendednavigation ul {
-	text-align: center;
-}
 .widget .extendednavigation li > .text,
 .widget .extendednavigation ul li a {
 	padding: 0;
